index.html updates

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
     <script nomodule src="/build/macbisdesign.js"></script>
   </head>
   <body>
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
-    <input-component first="Stencil"></input-component>
+    <!-- <text-input-component first="text-input-component"></text-input-component>
+    <text-input-error-component second="text-input-error-component"></text-input-error-component>
+    <text-input-success-component third="text-input-success-component"></text-input-success-component> -->
   </body>
 </html>
