--- a/src/index.html
+++ b/src/index.html
@@ -35,17 +35,17 @@
       <hr />
       <text-input-component kind="primary" label="Text input label" placeholder="Value" type="text" hint="undefined" required="false"></text-input-component>
       <hr />
-      <text-input-component kind="success" label="Text input label" placeholder="undefined" type="text" hint="undefined" required="false"></text-input-component>
+      <text-input-component kind="success" label="Success" placeholder="undefined" type="text" hint="undefined" required="false"></text-input-component>
       <hr />
-      <text-input-component kind="success" label="Text input label" placeholder="Value" type="text" hint="undefined" required="false"></text-input-component>
+      <text-input-component kind="success" label="Success" placeholder="Value" type="text" hint="undefined" required="false"></text-input-component>
       <hr />
-      <text-input-component kind="error" label="Text input label" placeholder="undefined" type="text" hint="undefined" required="false"></text-input-component>
+      <text-input-component kind="error" label="Error" placeholder="undefined" type="text" hint="undefined" required="false"></text-input-component>
       <hr />
-      <text-input-component kind="error" label="Text input label" placeholder="Value" type="text" hint="undefined" required="false"></text-input-component>
+      <text-input-component kind="error" label="Error" placeholder="Value" type="text" hint="undefined" required="false"></text-input-component>
       <hr />
-      <text-input-component kind="error" label="Text input label" placeholder="undefined" type="text" hint="undefined" required="true"></text-input-component>
+      <text-input-component kind="error" label="Error" placeholder="undefined" type="text" hint="undefined" required="true"></text-input-component>
       <hr />
-      <text-input-component kind="error" label="Text input label" placeholder="Value" type="text" hint="undefined" required="true"></text-input-component>
+      <text-input-component kind="error" label="Error" placeholder="Value" type="text" hint="undefined" required="true"></text-input-component>
       <hr />
     </div>
 
