--- a/src/index.html
+++ b/src/index.html
@@ -30,30 +30,137 @@
       <checkbox-component> 2014 </checkbox-component>
     </div>
 
+    <h2>Footers</h2>
+    <footer-component has-borders="true"></footer-component>
+
+    <footer-component bottom-bg="light-gray"></footer-component>
+
+    <footer-component flex-col="true" bottom-bg="light-gray"></footer-component>
+
+    <footer-component bottom-bg="light-gray" show-inspect="true"></footer-component>
+
+    <div style="height: 5rem"></div>
+
+    <footer-component show-above-part="false" show-address="true" bottom-bg="light-gray"></footer-component>
+
+    <div style="height: 5rem"></div>
+
+    <footer-component show-above-part="false" has-border="true"></footer-component>
+
+    <div style="height: 5rem"></div>
+
+    <footer-component show-above-part="false" has-border="true" show-address="true"></footer-component>
+
+    <div style="height: 5rem"></div>
+
+    <footer-component has-borders="true" bottom-bg="light-gray" top-left-color="blue"></footer-component>
+
+    <div style="height: 5rem"></div>
+
+    <footer-component top-bg="light-gray" bottom-bg="blue" bottom-color="white" top-left-color="blue"></footer-component>
+
+    <div style="height: 5rem"></div>
+
+    <footer-component top-left-color="white" top-right-color="white" bottom-color="white" top-bg="blue" bottom-bg="blue"></footer-component>
+    <div style="height: 5rem"></div>
+
+    <footer-component top-left-color="white" top-right-color="white" bottom-color="white" top-bg="gray" bottom-bg="gray"></footer-component>
+    <div style="height: 5rem"></div>
+
+    <footer-component top-bg="light-gray" bottom-bg="light-gray" show-inspect="true"></footer-component>
+
+    <div style="height: 5rem"></div>
+
+    <footer-component top-left-color="white" top-right-color="white" bottom-color="white" top-bg="black" bottom-bg="black"></footer-component>
+
+    <big-footer sitemap="true" has-borders="true"> </big-footer>
+
+    <big-footer top-bg="blue" bottom-bg="blue" top-left-color="white" top-right-color="white" bottom-color="white"> </big-footer>
+
+    <big-footer top-bg="gray" bottom-bg="gray" top-left-color="white" top-right-color="white" bottom-color="white"> </big-footer>
+
+    <big-footer top-bg="light-gray" bottom-bg="light-gray" show-inspect="true"> </big-footer>
+
+    <big-footer top-bg="black" top-left-color="white" top-right-color="white" bottom-color="white" bottom-bg="black"> </big-footer>
+
     <h2>Headers</h2>
     <div style="display: flex; flex-direction: column; gap: 1rem; margin-bottom: 2rem">
       <header-component
-        theme="blue"
+        theme="dark"
         size="normal"
-        show-search="true"
-        search-theme="blue"
-        search-text-theme="white"
-        header-logo="1"
-        header-logo-theme="blue"
-        account-theme="dark"
+        show-search="false"
+        header-logo="3"
+        header-logo-theme="dark"
         account-label="My Account"
-        account-style="simplified-no-label"
         nav-location="below"
-        nav-theme="white"
+        nav-theme="dark"
+        nav-separator="true"
+        header-logo-dash="true"
       >
         <dropdown-component>
-          <dropdown-link text="Section" col="3">
+          <dropdown-link theme="dark" panel-theme="dark" text="Section" col="3">
             <dropdown-panel-section>
               <dropdown-panel-link> For developers </dropdown-panel-link>
               <dropdown-panel-link> For developers </dropdown-panel-link>
             </dropdown-panel-section>
           </dropdown-link>
-          <dropdown-link text="Section" col="3">
+          <dropdown-link theme="dark" panel-theme="dark" text="Section" col="3">
+            <dropdown-panel-section>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+            </dropdown-panel-section>
+          </dropdown-link>
+        </dropdown-component>
+      </header-component>
+
+      <header-component
+        theme="blue"
+        size="normal"
+        show-search="false"
+        header-logo="3"
+        header-logo-theme="blue"
+        account-label="My Account"
+        nav-location="below"
+        nav-theme="blue"
+        nav-separator="true"
+        header-logo-dash="true"
+      >
+        <dropdown-component>
+          <dropdown-link theme="white" panel-theme="white" text="Section" col="3">
+            <dropdown-panel-section>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+            </dropdown-panel-section>
+          </dropdown-link>
+          <dropdown-link theme="white" panel-theme="white" text="Section" col="3">
+            <dropdown-panel-section>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+            </dropdown-panel-section>
+          </dropdown-link>
+        </dropdown-component>
+      </header-component>
+
+      <header-component
+        theme="blue"
+        size="normal"
+        show-search="false"
+        header-logo="3"
+        header-logo-theme="blue"
+        account-label="My Account"
+        nav-location="below"
+        nav-theme="blue"
+        nav-separator="true"
+        header-logo-dash="true"
+      >
+        <dropdown-component>
+          <dropdown-link theme="dark-blue" panel-theme="dark-blue" text="Section" col="3">
+            <dropdown-panel-section>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+            </dropdown-panel-section>
+          </dropdown-link>
+          <dropdown-link theme="dark-blue" panel-theme="dark-blue" text="Section" col="3">
             <dropdown-panel-section>
               <dropdown-panel-link> For developers </dropdown-panel-link>
               <dropdown-panel-link> For developers </dropdown-panel-link>
@@ -68,14 +175,13 @@
         show-search="false"
         search-theme="blue"
         search-text-theme="white"
-        header-logo="1"
+        header-logo="3"
         header-logo-theme="blue"
-        account-theme="dark"
         account-label="My Account"
-        account-style="simplified-no-label"
         nav-location="below"
         nav-theme="blue"
         nav-separator="true"
+        header-logo-dash="true"
       >
         <dropdown-component>
           <dropdown-link theme="white" panel-theme="white" panel-size="contain" text="Section" col="3">
@@ -90,24 +196,49 @@
       <header-component
         theme="blue"
         size="normal"
-        show-search="true"
+        show-search="false"
         search-theme="blue"
         search-text-theme="white"
-        header-logo="1"
+        header-logo="3"
         header-logo-theme="blue"
-        account-theme="dark"
         account-label="My Account"
-        account-style="simplified-no-label"
         nav-location="below"
         nav-theme="blue"
+        nav-separator="true"
+        header-logo-dash="true"
       >
-        <div slot="nav-slot" style="display: flex">
-          <button-component size="large" label="Button" type="primary" state="hover"></button-component>
-          <button-component size="large" label="Button" type="primary" state="hover"></button-component>
-          <button-component size="large" label="Button" type="primary" state="hover"></button-component>
-          <button-component size="large" label="Button" type="primary" state="hover"></button-component>
-          <button-component size="large" label="Button" type="primary" state="hover"></button-component>
-        </div>
+        <dropdown-component>
+          <dropdown-link theme="dark-blue" panel-theme="dark-blue" panel-size="contain" text="Section" col="3">
+            <dropdown-panel-section>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+            </dropdown-panel-section>
+          </dropdown-link>
+        </dropdown-component>
+      </header-component>
+
+      <header-component
+        theme="dark"
+        size="normal"
+        show-search="false"
+        search-theme="blue"
+        search-text-theme="white"
+        header-logo="3"
+        header-logo-theme="dark"
+        account-label="My Account"
+        nav-location="below"
+        nav-theme="dark"
+        nav-separator="true"
+        header-logo-dash="true"
+      >
+        <dropdown-component>
+          <dropdown-link theme="dark" panel-theme="dark" panel-size="contain" text="Section" col="3">
+            <dropdown-panel-section>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+              <dropdown-panel-link> For developers </dropdown-panel-link>
+            </dropdown-panel-section>
+          </dropdown-link>
+        </dropdown-component>
       </header-component>
 
       <header-component
@@ -116,12 +247,26 @@
         show-search="true"
         search-theme="blue"
         search-text-theme="white"
-        header-logo="1"
+        header-logo="3"
         header-logo-theme="blue"
-        account-theme="dark"
         account-label="My Account"
-        account-style="simplified-no-label"
+        header-logo-dash="true"
       >
+      </header-component>
+
+      <header-component
+        theme="blue"
+        nav-separator="true"
+        size="slim"
+        show-search="false"
+        header-logo="3"
+        header-logo-theme="blue"
+        account-label="My Account"
+        header-logo-dash="true"
+      >
+      </header-component>
+
+      <header-component theme="blue" account-container="false" size="slim" show-search="false" header-logo="3" header-logo-theme="blue" account-label="My Account">
       </header-component>
 
       <header-component
@@ -130,32 +275,48 @@
         show-search="false"
         search-theme="blue"
         search-text-theme="white"
-        header-logo="1"
+        header-logo="3"
         header-logo-theme="blue"
-        account-theme="dark"
         account-label="My Account"
-        account-style="simplified-no-label"
         nav-location="inline"
         nav-inline-position="left"
+        header-logo-dash="true"
       >
-        <div style="display: flex">
-          <button-component size="large" label="Button" type="primary" state="filled"></button-component>
-          <button-component size="large" label="Button" type="primary" state="filled"></button-component>
-          <button-component size="large" label="Button" type="primary" state="filled"></button-component>
-        </div>
+        <button-component size="large" label="Button" type="primary" state="filled"></button-component>
+        <button-component size="large" label="Button" type="primary" state="filled"></button-component>
+        <button-component size="large" label="Button" type="primary" state="filled"></button-component>
       </header-component>
 
       <header-component
-        theme="white"
+        theme="blue"
+        size="slim"
+        show-search="false"
+        search-theme="blue"
+        search-text-theme="white"
+        header-logo="3"
+        header-logo-theme="blue"
+        account-label="My Account"
+        nav-location="inline"
+        nav-inline-position="right"
+        header-logo-dash="true"
+        nav-separator="true"
+      >
+        <button-component size="large" label="Button" type="primary" state="filled"></button-component>
+        <button-component size="large" label="Button" type="primary" state="filled"></button-component>
+        <button-component size="large" label="Button" type="primary" state="filled"></button-component>
+      </header-component>
+
+      <header-component
+        theme="blue"
         size="slim"
         show-search="true"
-        search-theme="white"
-        search-text-theme="dark"
-        header-logo="2"
-        header-logo-theme="white"
-        account-theme="dark"
+        search-theme="blue"
+        search-text-theme="white"
+        header-logo="4"
+        header-logo-theme="blue"
         account-label="My Account"
-        account-style="simplified-no-label"
+        header-logo-dash="true"
+        header-logo-stretched="true"
       >
       </header-component>
 
@@ -167,9 +328,57 @@
         search-text-theme="white"
         header-logo="4"
         header-logo-theme="blue"
-        account-theme="dark"
         account-label="My Account"
-        account-style="detailed"
+        header-logo-dash="true"
+        header-logo-stretched="true"
+        nav-location="inline"
+        nav-inline-position="right"
+      >
+        <button-component size="large" label="Button" type="primary" state="filled"></button-component>
+      </header-component>
+
+      <header-component
+        theme="blue"
+        size="slim"
+        show-search="true"
+        search-theme="blue"
+        search-text-theme="white"
+        header-logo="4"
+        header-logo-theme="blue"
+        account-label="My Account"
+        header-logo-dash="true"
+        header-logo-stretched="true"
+        nav-location="inline"
+        nav-inline-position="right"
+      >
+        <button-component size="large" label="Button" type="primary" state="filled"></button-component>
+        <button-component size="large" label="Button" type="primary" state="filled"></button-component>
+      </header-component>
+
+      <header-component
+        theme="white"
+        size="slim"
+        show-search="true"
+        search-theme="white"
+        search-text-theme="dark"
+        header-logo="2"
+        header-logo-theme="white"
+        account-label="My Account"
+        account-container-theme="dark"
+      >
+      </header-component>
+
+      <header-component
+        theme="white"
+        size="slim"
+        show-search="true"
+        search-theme="white"
+        search-text-theme="blue"
+        header-logo="0"
+        header-logo-theme="white"
+        account-label="My Account"
+        header-logo-dash="true"
+        account-container-theme="blue"
       >
       </header-component>
 
@@ -181,30 +390,54 @@
         search-text-theme="blue"
         header-logo="6"
         header-logo-theme="white"
-        account-theme="blue"
         account-label="My Account"
-        account-style="detailed"
+        header-logo-dash="true"
+        header-logo-dash-theme="blue"
+        header-logo-stretched="true"
+        account-container-theme="blue"
       >
       </header-component>
 
       <header-component
-        theme="blue"
+        theme="white"
         size="slim"
         show-search="true"
-        search-theme="blue"
-        search-text-theme="white"
-        header-logo="4"
+        search-theme="white"
+        search-text-theme="blue"
+        header-logo="1"
         header-logo-theme="blue"
-        account-theme="dark"
         account-label="My Account"
-        account-style="simplified-no-label"
-        nav-location="inline"
-        nav-inline-position="right"
+        header-logo-dash="true"
+        account-container-theme="blue"
+        header-logo-stretched="true"
       >
-        <div style="display: flex">
-          <button-component size="large" label="Button" type="primary" state="filled"></button-component>
-          <dropdown-button button-label="Button"></dropdown-button>
-        </div>
+      </header-component>
+
+      <header-component
+        theme="dark"
+        size="slim"
+        show-search="true"
+        search-theme="dark"
+        search-text-theme="white"
+        header-logo="3"
+        header-logo-theme="dark"
+        account-label="My Account"
+        header-logo-dash="true"
+      >
+      </header-component>
+
+      <header-component
+        theme="white"
+        size="slim"
+        show-search="true"
+        search-theme="white"
+        search-text-theme="dark"
+        header-logo="2"
+        header-logo-theme="white"
+        account-label="My Account"
+        header-logo-dash="true"
+        account-container-theme="dark"
+      >
       </header-component>
 
       <header-component
@@ -218,6 +451,37 @@
         account-theme="blue"
         account-label="My Account"
         account-style="detailed"
+        header-logo-stretched="true"
+      >
+      </header-component>
+
+      <header-component
+        theme="dark"
+        size="slim"
+        show-search="false"
+        header-logo="7"
+        header-logo-theme="dark"
+        account-label="My Account"
+        header-logo-dash="true"
+        account-container-theme="white"
+      >
+      </header-component>
+
+      <header-component theme="dark" size="slim" show-search="false" header-logo="7" header-logo-theme="dark" account-label="My Account" account-container-theme="white">
+      </header-component>
+
+      <header-component
+        theme="white"
+        size="slim"
+        show-search="false"
+        nav-separator="true"
+        header-logo="0"
+        header-logo-theme="white"
+        account-label="My Account"
+        header-logo-dash="true"
+        account-container-theme="blue"
+        nav-separator-theme="blue"
+        header-logo-dash-theme="blue"
       >
       </header-component>
     </div>
