--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <h2>Footers</h2>
-    <footer-component top-border-y="true"></footer-component>
+    <footer-component has-borders="true"></footer-component>
 
     <footer-component bottom-bg="light-gray"></footer-component>
 
@@ -48,7 +48,7 @@
 
     <footer-component
       bottom-bg="light-gray"
-      show-icon="true"
+      show-inspect="true"
     ></footer-component>
 
     <div style="height: 5rem"></div>
@@ -63,21 +63,21 @@
 
     <footer-component
       show-above-part="false"
-      bottom-border-t="true"
+      has-border="true"
     ></footer-component>
 
     <div style="height: 5rem"></div>
 
     <footer-component
       show-above-part="false"
-      bottom-border-t="true"
+      has-border="true"
       show-address="true"
     ></footer-component>
 
     <div style="height: 5rem"></div>
 
     <footer-component
-      top-border-y="true"
+      has-borders="true"
       bottom-bg="light-gray"
       top-left-color="blue"
     ></footer-component>
@@ -114,7 +114,7 @@
     <footer-component
       top-bg="light-gray"
       bottom-bg="light-gray"
-      show-icon="true"
+      show-inspect="true"
     ></footer-component>
 
     <div style="height: 5rem"></div>
@@ -128,7 +128,7 @@
     ></footer-component>
     <div style="height: 5rem"></div>
 
-    <big-footer sitemap="true" top-border-y="true"> </big-footer>
+    <big-footer sitemap="true" has-borders="true"> </big-footer>
     <div style="height: 5rem"></div>
     <big-footer
       top-bg="blue"
@@ -149,7 +149,7 @@
     >
     </big-footer>
     <div style="height: 5rem"></div>
-    <big-footer top-bg="light-gray" bottom-bg="light-gray" show-icon="true">
+    <big-footer top-bg="light-gray" bottom-bg="light-gray" show-inspect="true">
     </big-footer>
     <div style="height: 5rem"></div>
     <big-footer
@@ -704,7 +704,6 @@
         state="error"
         label="Email"
         placeholder="Enter email"
-        error="Helpful error message"
       ></input-component>
     </div>
 
